compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__functions__provide_two_args_type_to_fn_wrong_types.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n   let a = 1\n   let b = \"not an int\"\n   fn(x, y) { x + y }(a, b)\n}\n"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:5:19
  │
5 │    fn(x, y) { x + y }(a, b)
  │                   ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    String

Hint: Strings can be joined using the `append` or `concat` functions from the
`rakun/string` module.
