compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__functions__unlabelled_after_labelled.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "fn main(wibble wibber, wobber) {\n  Nil\n}"
---
error: Unlabelled argument after labelled argument
  ┌─ /src/one/two.rakun:1:24
  │
1 │ fn main(wibble wibber, wobber) {
  │                        ^^^^^^

All unlabelled arguments must come before any labelled arguments.
